--- a/styles/css/vtex.product-summary.css
+++ b/styles/css/vtex.product-summary.css
@@ -36,21 +36,22 @@
   overflow: hidden !important;
 }
 
-
 .brandName {
   font-weight: 600;
   font-size: 18px;
   color: #2e2e2e;
 }
-
+/* 
 .container {
   text-align: start;
-  height: 390px;
-}
+  height: 440px;
+} */
 
 .container--summary {
   border-radius: 0 !important;
-
+  height: 440px !important;
+  border: 1px solid rgb(204, 203, 203);
+  width: 300px !important;
 }
 
 .imageContainer {
@@ -63,7 +64,6 @@
 .image {
   border-radius: 0.25rem;
 }
-
 
 /* .imageContainer:hover {
  opacity: 0.6;
@@ -83,9 +83,6 @@
     height: 275px;
 } */
 
-.containerNormal--listLayout{
+.containerNormal--listLayout {
   height: 250px !important;
 }
-
-
-
